--- a/main.css
+++ b/main.css
@@ -1,4 +1,5 @@
-html, body {
+html,
+body {
   margin: 0;
   padding: 0;
   width: 100%;
@@ -27,7 +28,8 @@ html, body {
   justify-content: center;
 }
 
-#video, #canvas {
+#video,
+#canvas {
   max-width: 50%;
   max-height: 50%;
   margin: auto;
